Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4279

Wrong path in include directive in generated Thrift sources

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 0.11.0
    • Erlang - Compiler
    • None

    Description

      My code change in THRIFT-4270 introduced a bug in the path to the generated header files in the generated Erlang code. Previously the `-include` directives did not specify a path, but after the THRIFT-4270 change the `-include` directive has the "gen-erl" directory as part of the path.

      Example include directive before the change:

      -include("constants_demo_types.hrl").
      

      Example include directive after the change:

      -include("test/gen-erl/constants_demo_types.hrl").
      

      Attachments

        Issue Links

          Activity

            People

              dhull David Hull
              dhull David Hull
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: