THRIFT-4279 Wrong path in include directive in generated Thrift sources Client: Erlang Patch: David Hull <david.hull@openx.com>

This closes #1329